<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Catering</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_username">Enter username</string>
    <string name="prompt_password">Enter your password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dishes">DishesActivity</string>
    <string name="dish_name">Dish name</string>
    <string name="dish_description">dish_description</string>
    <string name="dish_create">Create a dish</string>
    <string name="dish_name_placeholder">Enter a dish name</string>
    <string name="dish_description_placeholder">Enter a description</string>
    <string name="dish_advice">Please enter the required dish information.</string>
    <string name="delete_instructions">Delete Dish</string>
    <string name="dish_search">Search a dish...</string>
    <string name="delete_dish_advice">Please click the \"Search a dish\" button to look for the dish to be deleted</string>
    <string name="dish_delete">Delete dish</string>
    <string name="title_activity_dish_list">DishListActivity</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="title_activity_create_user">CreateUser</string>
    <string name="user_username_placeholder">Please enter your username</string>
    <string name="user_firstName_placeholder">Please enter your first name</string>
    <string name="user_password_placeholder">Please enter your password</string>
    <string name="user_lastName_placeholder">Please enter your last name</string>
    <string name="delete_user_advice">Please click on the \"Search a user\" button to look for the user to be deleted</string>
    <string name="user_search">Search a user...</string>
    <string name="user_delete">Delete user</string>
    <string name="choose_dish">Choose a dish...</string>
    <string name="title_activity_users">UsersActivity</string>
    <string name="title_activity_user_list">UserListActivity</string>
    <string name="choose_user">Choose a user...</string>
    <string name="user_create">Create User</string>
    <string name="save_menu">Save Week Menu</string>

</resources>
