<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.usuario.catering.DeleteDish">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/search_dish_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_dish_advice"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/search_dish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dish_search" />

    <TextView
        android:id="@+id/dish_to_delete_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/delete_dish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dish_delete" />


</LinearLayout>