<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.example.usuario.catering.CreateDish">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dish_textView"
            android:layout_width="283dp"
            android:layout_height="82dp"
            android:text="@string/dish_advice"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:src="@android:drawable/ic_menu_manage" />
    </LinearLayout>

    <EditText
        android:id="@+id/dish_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="86dp"
        android:ellipsize="none"
        android:hint="@string/dish_name_placeholder"
        android:maxLines="1"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:singleLine="true" />


    <EditText
        android:id="@+id/dish_description"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dish_name"
        android:hint="@string/dish_description_placeholder"
        android:maxLines="15"
        android:singleLine="true" />

    <Button
        android:id="@+id/createDish"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dish_description"
        android:layout_centerVertical="true"
        android:text="@string/dish_create"
        android:textStyle="bold" />


</RelativeLayout>
